--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <h1>Triqui</h1>
   <hr>
   <div class="board" id="board">
-    <button class="box1" id="box1">clean</button>    
-    <button class="box2" id="box2">clean</button>    
-    <button class="box3" id="box3">clean</button>    
-    <button class="box4" id="box4">clean</button>    
-    <button class="box5" id="box5">clean</button>    
-    <button class="box6" id="box6">clean</button>    
-    <button class="box7" id="box7">clean</button>    
-    <button class="box8" id="box8">clean</button>    
-    <button class="box9" id="box9">clean</button>    
+    <button class="box1" id="box1"></button>    
+    <button class="box2" id="box2"></button>    
+    <button class="box3" id="box3"></button>    
+    <button class="box4" id="box4"></button>    
+    <button class="box5" id="box5"></button>    
+    <button class="box6" id="box6"></button>    
+    <button class="box7" id="box7"></button>    
+    <button class="box8" id="box8"></button>    
+    <button class="box9" id="box9"></button>    
   </div>
   <script src="app.js"></script>
 </body>
